--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.2.0",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
     "react-select": "^5.10.1"
